<resources>
    <string name="app_name">My Calculator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="parenthesis">()</string>
    <string name="exponent">^</string>
    <string name="mod">%</string>
    <string name="factorial">!</string>
    <string name="square">^2</string>
    <string name="cube">^3</string>
    <string name="square_root">√</string>
    <string name="cube_root">∛</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>

    <string name="clear">Clear</string>
    <string name="del">Del</string>

    <string name="expressionenter">Enter the expression</string>

</resources>